Issue #7834: Fix connect() of Bluetooth L2CAP sockets with recent versions of the Linux kernel.  Patch by Yaniv Aknin.